@@ -18,6 +18,8 @@ toc::[]
 :link-proxy-from-env: https://golang.org/pkg/net/http/#ProxyFromEnvironment
 
 == HEAD
+*   Add `--automaxprocs` flag to set GOMAXPROCS automatically to match Linux
+    container CPU quota/limits.
 
 == v2.4.7 - 2023-11-13
 *   Add http3/quic server support. New flag `--quic`. Requires `--ssl-listen`.
